--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ashadria1/fitness-tracker#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.11.17",
     "path": "^0.12.7"
   }
