tweeking mongo settings

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/ashadria1/fitness-tracker.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Adrian Ash",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ashadria1/fitness-tracker/issues"
