--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
   },
   "homepage": "https://github.com/ashadria1/fitness-tracker#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.11.17",
-    "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {}
 }
